fixed alignment

--- a/automechta-new/css/style.css
+++ b/automechta-new/css/style.css
@@ -428,6 +428,7 @@ button {
     color: #000;
     font-size: 16px;
     padding: 3px 10px;
+    text-align: center;
     margin: 0;
     cursor: pointer;
 }
